{
    "name": "VRActions",
    "maps": [
        {
            "name": "VRInputs",
            "id": "3cb675d7-3df1-4c86-b252-6aff87011d3a",
            "actions": [
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "c485a7c7-f203-47c2-8ccf-433b7641cb31",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "7de74128-275a-4313-8ee6-f7d33d4dcdf9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AnalogPressed",
                    "type": "Button",
                    "id": "70c0c151-2f59-402c-abce-d4a260e23a64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerValue",
                    "type": "Value",
                    "id": "ade716e1-4372-4ce8-8984-57f7a7a36ebd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripValue",
                    "type": "Value",
                    "id": "8ce67000-aaec-45e7-aa7e-72af0269d275",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AnalogValue",
                    "type": "Value",
                    "id": "f8257ff9-8a1f-42b0-aa93-2ec2e0d2cf55",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryButtonPressed",
                    "type": "Button",
                    "id": "cd97833d-cf7b-4659-9476-f9576c11db1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButtonPressed",
                    "type": "Button",
                    "id": "3a7d2587-6900-4a7d-97ec-29b83416d290",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "2f18a381-b7b6-455a-95cd-2413838b485d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "8ba07383-a572-4e07-b439-2c2143af40dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "3f444364-8706-4f75-a575-79bc22f70cce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "630ab50d-d939-4e06-97bc-3c28db4be122",
                    "path": "<XRController>/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0ea09f1-f6b1-44e5-93ba-53ed2c63522a",
                    "path": "<XRController>/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ee5090d-73a6-4e33-bb1f-5c83932aefde",
                    "path": "<XRController>/{Primary2DAxisClick}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9dd6eb7-d527-48e6-841d-0e17bd0849c7",
                    "path": "<XRController>/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e91db862-3c00-49dd-902a-5f2555f15473",
                    "path": "<XRController>/{Grip}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25287ac3-5e58-40ca-b9a2-1c88136b8727",
                    "path": "<XRController>/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17e475d9-3908-4d61-9909-1188c69dd02d",
                    "path": "<XRController>/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf429e6d-98bc-4d93-9a1e-dd8c65e8b793",
                    "path": "<XRController>/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6eef1331-69dc-4bf2-a504-ac48b25a1b70",
                    "path": "<XRController>/{Primary2DAxisClick}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "478f2516-320f-4e0d-accc-fc7bc95228d2",
                    "path": "<XRController>/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8c673c5-75a9-44de-95bf-a07fc4cca0b5",
                    "path": "<XRController>/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}